# carla-autoware

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  build.sh  carla_autoware_control.py  run.sh  update_ros_bridge.patch  update_sim.patch  update_sim_code.patch  update_sim_version.patch
autoware_data/map/: Town02.pcd  map.pcd
autoware_data/map/vector_map/: dtlane.csv  lane.csv  node.csv  point.csv
autoware_launch/: AutowareRosAgent.py  autoware.launch  challenge.launch  devel.launch  my_detection.launch  my_localization.launch  my_map.launch  my_mission_planning.launch  my_motion_planning.launch  my_sensing.launch  sensors.json  start.sh  tf.launch
carla-autoware-agent/: CMakeLists.txt  package.xml
carla-autoware-agent/agent/: bridge.launch  my_agent.launch
carla-autoware-agent/agent/config/: sensors.json
carla-autoware-agent/agent/launch/: my_detection.launch  my_localization.launch  my_map.launch  my_mission_planning.launch  my_motion_planning.launch  my_sensing.launch
carla-autoware-agent/agent/rviz/: config.rviz  record.rviz
carla-autoware-agent/launch/: carla_autoware_agent.launch  carla_autoware_bridge.launch
carla_autoware_agent/: package.xml
carla_autoware_agent/agent/: bridge.launch  my_agent.launch
carla_autoware_agent/agent/config/: sensors.json
carla_autoware_agent/agent/launch/: my_map.launch  my_mission_planning.launch  my_motion_planning.launch
carla_autoware_agent/agent/rviz/: config.rviz
carla_autoware_agent/launch/: base.launch
carla_autoware_manager/: CMakeLists.txt  package.xml  setup.py
carla_autoware_manager/launch/: carla_autoware_manager.launch
carla_autoware_manager/src/carla_autoware_manager/: manager.py
catkin_ws/: .gitignore  check.sh
catkin_ws/src/carla_autoware_bridge/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/carla_autoware_bridge/config/: sensors.json
catkin_ws/src/carla_autoware_bridge/launch/: carla_autoware_bridge.launch  carla_autoware_bridge_capture_pcl_map.launch  carla_autoware_bridge_common.launch  carla_autoware_bridge_with_manual_control.launch  tf.launch
catkin_ws/src/carla_autoware_bridge/src/: odometry_to_posestamped  vehiclecmd_to_ackermanndrive
catkin_ws/src/carla_autoware_bridge/src/carla_autoware_bridge/: carla_to_autoware_detected_objects  carla_to_autoware_vehicle_status  carla_to_autoware_waypoints  odometry_to_posestamped  vehiclecmd_to_ackermanndrive
catkin_ws/src/carla_autoware_client/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/carla_autoware_client/launch/: carla_autoware_client.launch  carla_manual_control.launch
catkin_ws/src/carla_autoware_client/src/carla_autoware_client/: carla_autoware_client
catkin_ws/src/carla_autoware_client/src/carla_client/: carla_autoware_client
catkin_ws/src/carla_autoware_ego_vehicle/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/carla_autoware_ego_vehicle/launch/: carla_autoware_ego_vehicle.launch
catkin_ws/src/carla_autoware_ego_vehicle/src/carla_autoware_ego_vehicle/: carla_autoware_ego_vehicle
catkin_ws/src/carla_autoware_waypoint_publisher/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/carla_autoware_waypoint_publisher/launch/: carla_autoware_waypoint_publisher.launch
catkin_ws/src/carla_autoware_waypoint_publisher/src/: carla_autoware_waypoint_publisher
catkin_ws/src/carla_autoware_waypoint_publisher/src/carla_autoware_waypoint_publisher/: carla_autoware_waypoint_publisher
catkin_ws/src/carla_client/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/carla_client/launch/: carla_client.launch  carla_manual_client.launch  carla_manual_control.launch
catkin_ws/src/carla_client/src/: carla_autoware_control  carla_autoware_manual_control  carla_autoware_manual_control.py  carla_autoware_sensors.py
catkin_ws/src/carla_client/src/carla_client/: carla_autoware_client  carla_autoware_control  carla_autoware_manual_control  carla_autoware_sensors.py
catkin_ws/src/carla_points_map_loader/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/carla_points_map_loader/launch/: carla_points_map_loader.launch
catkin_ws/src/carla_points_map_loader/src/carla_points_map_loader/: carla_points_map_loader
catkin_ws/src/pcl_recorder/: CMakeLists.txt
catkin_ws/src/pcl_recorder/include/: PclRecorder.h
catkin_ws/src/pcl_recorder/launch/: pcl_recorder.launch
catkin_ws/src/pcl_recorder/src/: PclRecorder.cpp  main.cpp
docker/: Autoware-eliminate-pcl-warnings.patch  Dockerfile  README.md  build.sh  entrypoint.sh  param.yaml  run.sh
docker/challenge/: .bashrc  Dockerfile  README.md  entrypoint.sh
docker/challenge/team_code/: AutowareRosAgent.py
docs/: map_creation.md  use_scenario_runner.md
test/: manager_test.py
