<?xml version="1.0"?>
<package format="2">
  <name>carla_autoware_manager</name>
  <version>0.0.1</version>
  <description>The carla_autoware_manager package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
