<?xml version="1.0"?>
<package format="2">
  <name>carla_autoware_bridge</name>
  <version>0.0.0</version>
  <description>The carla_autoware_bridge package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <export>
  </export>
</package>
